--- a/DairyProject/templates/cattle/delete_cattle.html
+++ b/DairyProject/templates/cattle/delete_cattle.html
@@ -1,8 +1,16 @@
-<!-- delete_cattle.html -->
-
-<h2>Delete Cattle</h2>
-<p>Are you sure you want to delete this cattle?</p>
-<form method="post">
-  {% csrf_token %}
-  <button type="submit">Confirm Delete</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Delete Cattle</title>
+</head>
+<body>
+    <h1>Delete Cattle</h1>
+    <p>Are you sure you want to delete "{{ cattle.cattle_license }}"?</p>
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit">Confirm Delete</button>
+    </form>
+    <a href="{% url 'view_cattle' %}">Cancel</a>
+</body>
+</html>
